<resources>
    <string name="app_name">LookingFor</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fragment_create_event">Create an Event</string>
    <string name="title_fragment_join_event">Join an Event</string>
    <string name="title_fragment_my_events">My Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="default_notification_channel_id">lf.lookingfor</string>
    <string name="group">Select a group to invite...</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_user_birthyear">Enter your birth year</string>
    <string name="action_choose_picture">Choose your profile picture</string>
    <string name="action_choose_display_name">Choose a display name</string>
    <string name="action_confirm_profile">Confirm profile</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_sign_up">Not registered? Sign up</string>
    <string name="action_return_sign_in">Already registered? Sign in</string>
    <string name="action_confirm_sign_up">Confirm sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
