<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tap on the camera to choose your profile picture"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_margin="20dp"
            android:background="@drawable/camera"
            android:scaleType="centerCrop" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>

    <EditText
        android:id="@+id/display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/action_choose_display_name"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_choose_display_name"
        android:imeOptions="actionUnspecified"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/user_birthyear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/action_user_birthyear"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_user_birthyear"
        android:imeOptions="actionUnspecified"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/confirm_profile"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_confirm_profile"
        android:textStyle="bold" />

</LinearLayout>